# uadk

./: '  .gitignore  0001-Warpdrive-v2-Add-SEC-Digest-user-APIs-and-driver.patch  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  NEWS  OPENSSL_COMPATIBILITY_TEST_GUIDE.md  README  README.md  adapter.c  bmm.c  bmm.h  cleanup.sh  conf.sh  configure.ac  libwd.map  libwd_comp.map  libwd_crypto.map  libwd_dae.map  smm.c  smm.h  uadk.cnf  uadk_mk.sh  user_sched_sample.c  wd.c  wd.h  wd_adapter.c  wd_adapter.h  wd_aead.c  wd_agg.c  wd_alg.c  wd_bmm.c  wd_cipher.c  wd_comp.c  wd_comp.h  wd_dh.c  (+14 more)
.github/scripts/: ci.sh
.github/workflows/: ci.yml
adapter/: adapter.c  adapter_private.h  adapter_roundrobin.c  adapter_threshold.c
docs/: ReleaseNotes.md  UADK_framework_expansion_and_modular_dynamic_loading_design.md  hpre.rst  log.rst  maintenance.md  perf.rst  sanity_test.md  test_result.rst  wd_alg_init2.md  wd_design.md  wd_environment_variable  wd_sched.rst
drv/: dummy_drv.c  dummy_drv.h  hisi_comp.c  hisi_comp.h  hisi_comp_huf.c  hisi_comp_huf.h  hisi_dae.c  hisi_dae.h  hisi_dae_common.c  hisi_dae_join_gather.c  hisi_hpre.c  hisi_qm_udrv.c  hisi_qm_udrv.h  hisi_sec.c  hisi_udma.c  hisi_zlib.c  isa_ce_sm3.c  isa_ce_sm3.h  isa_ce_sm3_armv8.S  isa_ce_sm4.c  isa_ce_sm4.h  isa_ce_sm4_armv8.S  wd_drv.h
drv/hash_mb/: hash_mb.c  hash_mb.h  md5_mb_sve.S  md5_sve_common.S  sm3_mb_sve.S  sm3_sve_common.S
include/: Makefile.am  adapter.h  dummy_hw_usr_if.h  hisi_comp.h  hisi_hpre.h  hisi_qm_udrv.h  hisi_sec.h  hpre_usr_if.h  qm_usr_if.h  sched_sample.h  sec_usr_if.h  uacce.h  wd.h  wd_aead.h  wd_agg.h  wd_alg.h  wd_alg_common.h  wd_bmm.h  wd_cipher.h  wd_common.h  wd_comp.h  wd_dae.h  wd_dh.h  wd_digest.h  wd_ecc.h  wd_ecc_curve.h  wd_internal.h  wd_join_gather.h  wd_rsa.h  wd_sched.h  wd_udma.h  wd_util.h  wd_zlibwrapper.h  zip_usr_if.h
include/crypto/: aes.h  galois.h  sm4.h
include/drv/: arm_arch_ce.h  wd_aead_drv.h  wd_agg_drv.h  wd_cipher_drv.h  wd_comp_drv.h  wd_dh_drv.h  wd_digest_drv.h  wd_ecc_drv.h  wd_join_gather_drv.h  wd_rsa_drv.h  wd_udma_drv.h
include/v1/: wd.h  wd_adapter.h  wd_aead.h  wd_cipher.h  wd_comp.h  wd_dh.h  wd_digest.h  wd_ecc.h  wd_rng.h  wd_rsa.h
include/v1/drv/: wd_drv.h
include/v1/internal/: uacce.h  wd_ecc_curve.h
lib/: libwd.pc.in  libwd_comp.pc.in  libwd_crypto.pc.in
lib/crypto/: aes.c  galois.c  sm4.c
sample/: Makefile.am  uadk_comp.c  uadk_sample.c
test/: Makefile  Makefile.am  example  example.c  list_loader.py  sanity_test.sh  sched_sample.c  test.sh  test_bind_api.c  test_comp.c  test_dummy.c  test_hisi_zip.c  test_hisi_zlib.c  test_lib.c  test_lib.h  test_sva_bind.c  test_sva_perf.c  test_zlib.c  wd_mempool_test.c
test/hisi_hpre_test/: Makefile  Makefile.am  hpre_test_sample.h  test_hisi_hpre.c  test_hisi_hpre.h
test/hisi_sched_test/: build.sh  test_sched.c
test/hisi_sec_test/: Makefile  Makefile.am  test_hisi_sec.c  test_hisi_sec.h
test/hisi_zip_test/: Makefile  Makefile.am  example.c  sva_file_test.c  test_comp.c  test_hisi_zlib.c  test_lib.c  test_lib.h  test_sva_bind.c  test_sva_perf.c  testsuit.c  zip_sva_test.c  zip_wrap.c
uadk_benchmark/: Makefile.am  sec_uadk_benchmark.c  sec_wd_benchmark.c  sec_wd_benchmark.h  uadk_benchmark.c  uadk_benchmark.h
uadk_tool/: Makefile.am  sec_soft_benchmark.h  sec_uadk_benchmark.c  sec_uadk_benchmark.h  sec_wd_benchmark.c  uadk_benchmark.c  uadk_benchmark.h  uadk_dfx.c  uadk_dfx.h  uadk_tool.c
uadk_tool/benchmark/: hpre_protocol_data.h  hpre_uadk_benchmark.c  hpre_uadk_benchmark.h  hpre_wd_benchmark.c  hpre_wd_benchmark.h  sec_soft_benchmark.c  sec_soft_benchmark.h  sec_uadk_benchmark.c  sec_wd_benchmark.c  trng_wd_benchmark.c  trng_wd_benchmark.h  uadk_benchmark.c  uadk_benchmark.h  zip_uadk_benchmark.c  zip_uadk_benchmark.h  zip_wd_benchmark.c  zip_wd_benchmark.h
uadk_tool/benchmark/include/: fse.h
uadk_tool/dfx/: uadk_dfx.c  uadk_dfx.h
uadk_tool/include/openssl/: opensslconf.h
uadk_tool/test/: comp_lib.c  comp_lib.h  comp_main.c  comp_main.h  sec_template_tv.h  test_sec.c  test_sec.h  uadk_test.c  uadk_test.h
ut/: ut.c  ut.rst  wd_sched.ut.c
v1/: LICENSE  Makefile.am  bmm.c  bmm.h  libwd.map  smm.c  smm.h  uacce.h  wd.c  wd.h  wd_adapter.c  wd_adapter.h  wd_aead.c  wd_aead.h  wd_bmm.c  wd_bmm.h  wd_cipher.c  wd_cipher.h  wd_comp.c  wd_comp.h  wd_dh.c  wd_dh.h  wd_digest.c  wd_digest.h  wd_ec.c  wd_ec.h  wd_ec_util.h  wd_ecc.c  wd_ecc.h  wd_rng.c  wd_rng.h  wd_rsa.c  wd_rsa.h  wd_sched.c  wd_sched.h  wd_sgl.c  wd_sgl.h  wd_util.c  wd_util.h
v1/drv/: dummy_drv.c  dummy_drv.h  hisi_hpre_udrv.c  hisi_hpre_udrv.h  hisi_qm_udrv.c  hisi_qm_udrv.h  hisi_rde_udrv.c  hisi_rde_udrv.h  hisi_rng_udrv.c  hisi_rng_udrv.h  hisi_sec_udrv.c  hisi_sec_udrv.h  hisi_zip_huf.c  hisi_zip_huf.h  hisi_zip_udrv.c  hisi_zip_udrv.h  wd_drv.h
v1/include/: sec_usr_if.h  uacce.h
v1/internal/: dummy_hw_usr_if.h  hpre_usr_if.h  qm_usr_if.h  rde_usr_if.h  uacce.h  wd_dummy_usr_if.h  wd_ecc_curve.h  zip_usr_if.h
v1/test/: Makefile.am  bmm.c  bmm.h  smm.c  smm.h  test_dummy.c  test_hisi_zip.c  test_hisi_zlib.c  wd_sched.c  wd_sched.h  wd_zip_test.c  zip_alg.c  zip_alg.h
v1/test/bmm_test/: Makefile.am  bmm_test.c  bmm_test.h
v1/test/hisi_hpre_test/: Makefile.am  hpre_test_sample.h  hpre_test_tools.c  test_hisi_hpre.c  test_hisi_hpre.h  test_hisi_hpre_times.c
v1/test/hisi_sec_test/: Makefile.am  test_hisi_sec.c  test_hisi_sec.h
v1/test/hisi_sec_test_sgl/: Makefile.am  test_hisi_sec_sgl.c  test_hisi_sec_sgl.h
v1/test/hisi_trng_test/: Makefile.am  test_hisi_trngk.c  test_hisi_trngp.c  test_hisi_trngu.c
v1/test/hisi_zip_test/: Makefile.am  test_hisi_zip.c  test_hisi_zip_perf.c  test_hisi_zlib.c  wd_zip_test.c  wd_zip_test_1630.c  zconf.h  zip_alg.c  zlib.h
v1/test/hisi_zip_test_sgl/: Makefile.am  sgl_test.c  sgl_test.h  wd_sched_sgl.c  wd_sched_sgl.h  wd_zip_test_sgl.c  zip_alg_sgl.c  zip_alg_sgl.h
v1/test/test_dpdk_mem/: readme.txt  testpmd.c
v1/test/test_mm/: Makefile.am  test_wd_mem.c  test_wd_mem.h
