
nobase_include_HEADERS = wd.h wd_cipher.h wd_comp.h \
			 wd_dh.h wd_digest.h wd_rsa.h \
			 uacce.h wd_alg_common.h \
			 wd_common.h wd_ecc.h \
			 v1/wd.h v1/wd_adapter.h \
			 v1/wd_aead.h v1/wd_bmm.h \
			 v1/wd_cipher.h v1/wd_comp.h \
			 v1/wd_dh.h v1/wd_digest.h \
			 v1/wd_ecc.h v1/wd_rng.h \
			 v1/wd_rsa.h v1/wd_sgl.h \
			 v1/wd_util.h v1/internal/uacce.h \
			 v1/internal/dummy_hw_usr_if.h \
			 v1/internal/wd_dummy_usr_if.h \
			 v1/internal/wd_ecc_curve.h

